--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td, .wrapper {
   margin: 0;
   padding: 0;
@@ -16,6 +17,20 @@ table {
   border-spacing: 0;
 }
 
+@font-face {
+  font-family: "FuturaPT-Book";
+  src: url("../fonts/FuturaPT-Book.ttf");
+  src: local("вє"), url("../fonts/FuturaPT-Book.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "FuturaPT-Demi";
+  src: url("../fonts/FuturaPT-Demi.ttf");
+  src: local("вє"), url("../fonts/FuturaPT-Demi.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   font-family: "FTN45", sans-serif;
   font-style: normal;
@@ -30,17 +45,28 @@ h1 {
   line-height: 32px;
   color: #383A41;
   margin-bottom: 30px;
-  font-family: FTN65;
+  font-family: FuturaPT-Demi;
 }
 
 h3 {
+  font-family: FuturaPT-Book;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 500;
   font-size: 20px;
   line-height: 20px;
   color: #383A41;
-  font-family: FTN45;
+  margin-bottom: 24px;
+}
+
+h5 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
+  color: #383A41;
+  font-family: FuturaPT-Demi;
   margin-bottom: 25px;
+  text-transform: uppercase;
 }
 
 input[type=text] {
@@ -330,15 +356,21 @@ input[type=text] {
   margin-bottom: 24px;
 }
 .line_param_top {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
   font-size: 12px;
   line-height: 12px;
   color: #9A9A9A;
-  margin-bottom: 10px;
 }
 .line_param_bottom {
-  line-height: 12px;
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
   color: #383A41;
-  padding-bottom: 12px;
+  padding: 4px 0 12px;
 }
 .line_param_border {
   width: 100%;
@@ -411,20 +443,24 @@ input[type=text] {
 }
 .footer .title_line_t {
   display: inline;
+  text-align: center;
+  padding-right: 40px;
+  cursor: pointer;
+  font-family: FuturaPT-Book;
+  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
-  text-align: center;
   color: #383A41;
-  padding-right: 40px;
-  font-family: FTN65;
-  cursor: pointer;
 }
 .footer .title_line_t.search {
   background: url(../images/s_i.svg) no-repeat 100% center;
 }
 .footer .title_line_t.filter {
   background: url(../images/filt.svg) no-repeat 100% center;
+}
+.footer .title_line_t.burger {
+  background: url(../images/burger.svg) no-repeat 100% center;
 }
 
 .footer.fill {
@@ -455,6 +491,15 @@ input[type=text] {
 .c_head a {
   display: none;
   line-height: 16px;
+  color: #32AAA7;
+}
+.c_head a.back {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 12px;
+  text-transform: uppercase;
   color: #32AAA7;
 }
 
@@ -522,10 +567,12 @@ input[type=text] {
   border-bottom: 1px solid #BABABA;
   background: #DEE2F3;
   padding: 8px;
+  font-family: FuturaPT-Demi;
+  font-style: normal;
+  font-weight: 500;
   font-size: 14px;
-  line-height: 12px;
-  color: #000000;
-  font-family: FTN65;
+  line-height: 16px;
+  color: #383A41;
   text-align: left;
 }
 .middle_part table tr th:nth-child(1) {
@@ -534,10 +581,12 @@ input[type=text] {
 }
 .middle_part table tr td {
   padding: 8px;
+  font-family: FuturaPT-Demi;
+  font-style: normal;
+  font-weight: 500;
   font-size: 14px;
-  line-height: 12px;
-  color: #000000;
-  font-family: FTN65;
+  line-height: 16px;
+  color: #383A41;
 }
 .middle_part table tr td:nth-child(1) {
   border-right: 1px solid #BABABA;
@@ -644,6 +693,14 @@ table.bordered tr td {
   float: left;
   margin-right: 20px;
 }
+.radio label {
+  font-family: FuturaPT-Demi;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #383A41;
+}
 
 .custom-radio {
   position: absolute;
@@ -653,14 +710,12 @@ table.bordered tr td {
 
 .custom-radio + label {
   display: inline-flex;
-  align-items: center;
-  -webkit-user-select: none;
-          user-select: none;
-  font-size: 12px;
-  line-height: 12px;
+  font-family: FuturaPT-Demi;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
   color: #383A41;
-  font-family: FTN65;
-  cursor: pointer;
 }
 
 .custom-radio + label::before {
@@ -709,12 +764,11 @@ table.bordered tr td {
 .tlabel {
   position: absolute;
   top: 42px;
-  /* left: 37px; */
   transition: 0.15s ease-in-out;
   color: #a0a0a6;
   pointer-events: none;
   left: 0;
-  text-transform: uppercase;
+  font-family: FuturaPT-Book;
 }
 
 .tinput {
@@ -733,10 +787,6 @@ table.bordered tr td {
   border-bottom: 1px solid #32AAA7;
 }
 .tinput:focus ~ label {
-  font-size: 9px;
-  top: 25px;
-}
-.tinput:valid ~ label {
   font-size: 9px;
   top: 25px;
 }
