Добавление общих элементов

--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,22 @@ input[type=text] {
 .component_head_sort {
   width: 35%;
 }
+.component_head_sort label {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+  color: #9A9A9A;
+}
+.component_head_sort input[type=text] {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #383A41;
+}
 .component_body {
   width: 100%;
   float: left;
@@ -474,6 +490,7 @@ input[type=text] {
   line-height: 12px;
   text-transform: uppercase;
   color: #000000;
+  font-family: FuturaPT-Demi;
 }
 .title_total_text {
   margin-right: 10px;
@@ -519,6 +536,9 @@ input[type=text] {
   margin-right: 15px;
 }
 .nav_top ul li a {
+  font-family: FuturaPT-Book;
+  font-style: normal;
+  font-weight: normal;
   font-size: 14px;
   line-height: 16px;
   color: #32AAA7;
@@ -564,6 +584,7 @@ input[type=text] {
   background: #E3E3E4;
 }
 .middle_part table tr th {
+  position: relative;
   border-bottom: 1px solid #BABABA;
   background: #DEE2F3;
   padding: 8px;
@@ -617,8 +638,8 @@ table.bordered tr td {
   font-size: 14px;
   line-height: 16px;
   color: #32AAA7;
-  text-decoration: underline;
   margin: 10px 0;
+  border-bottom: 1px dotted;
 }
 
 .lin_t_bot {
@@ -748,22 +769,31 @@ table.bordered tr td {
 
 .label_in {
   position: relative;
-  padding: 30px 0;
+  padding: 27px 0;
 }
 .label_in .search {
   display: block;
-  background: url(../images/s_i.svg) no-repeat center;
-  cursor: pointer;
+  position: absolute;
   width: 24px;
   height: 24px;
-  position: absolute;
+  background: url(../images/s_i.svg) no-repeat center;
+  cursor: pointer;
   right: 0;
   bottom: 35px;
+}
+.label_in .array_down {
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  right: 0;
+  bottom: 35px;
+  background: url(../images/array_down.png) no-repeat center;
 }
 
 .tlabel {
   position: absolute;
-  top: 42px;
   transition: 0.15s ease-in-out;
   color: #a0a0a6;
   pointer-events: none;
@@ -1107,4 +1137,25 @@ table.bordered tr td {
 
 .comment_block {
   display: none;
+}
+
+.table_array {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  float: right;
+}
+.table_array_bottom {
+  position: absolute;
+  right: 0;
+  top: 20px;
+}
+
+.input_edit {
+  display: block;
+  width: 40%;
+  border: 0;
+  border-bottom: 1px solid #32AAA7;
+  outline: none;
+  padding: 5px 0;
 }
