--- a/scss/320.scss
+++ b/scss/320.scss
@@ -1,7 +1,4 @@
 @media only screen and (min-width:320px) and (max-width:800px) {
-  .header {
-    display: none;
-  }
 
   .tlabel {
     position: absolute;
@@ -231,14 +228,7 @@
   }
 
   .footer {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    z-index: 10;
     padding-left: 20px;
-    box-sizing: border-box;
-    background: no-repeat;
-    box-shadow: none;
 
     &_line a {
       display: block;
@@ -279,7 +269,6 @@
 
   .title_line_t.filter {
     background: url(../images/filt.svg) no-repeat 95% center;
-    float: left;
     padding-left: 20px;
     width: 100%;
     text-align: left;
@@ -318,13 +307,8 @@
   }
 
   h1 {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 16px;
-    color: #383A41;
-    margin-bottom: 0px;
-    font-family: FTN65;
+    font-size: 24px;
+    line-height: 24px;
   }
 
   .label_in {
@@ -347,13 +331,11 @@
   }
 
   .c_head {
-    float: left;
+    position: relative;
     width: 100%;
-    padding-right: 20px;
     height: 40px;
-    padding-left: 50px;
+    float: left;
     box-sizing: border-box;
-    position:relative
   }
 
   .c_head a {
