--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,6 +107,10 @@ input[type="text"] {
     float: left;
     margin-left: 15px;
   }
+
+  .acc_b_menu {
+    display: none;
+  }
 }
 
 .left_menu {
@@ -331,9 +335,21 @@ input[type="text"] {
   }
 }
 
+.w50 {
+  display: block;
+  width: 49%;
+  float: left;
+  box-sizing: border-box;
+  margin-right: 0 !important;
+}
+
 .line_param_input {
   width: 100%;
   position: relative;
+}
+
+.for_adaptive {
+  display: none;
 }
 
 .pr_names {
@@ -1145,14 +1161,6 @@ table.bordered tr td {
   }
 }
 
-.w50 {
-  display: block;
-  width: 49%;
-  float: left;
-  box-sizing: border-box;
-  margin-right: 0 !important;
-}
-
 .w50.last {
   margin-left: 2%;
 }
@@ -1317,8 +1325,8 @@ table.bordered tr td {
   border-radius: 1px;
 }
 
-.acc_b.active .acc_nav {
-  display: block
+.acc_n.active .acc_nav {
+  display: block;
 }
 
 .acc_nav ul li {
