--- a/css/style.css
+++ b/css/style.css
@@ -322,8 +322,17 @@ input[type=text] {
 }
 
 .line_param_input {
-  width: 100%;
   position: relative;
+  width: 100%;
+}
+
+.line_param_input_t {
+  width: 49%;
+  float: left;
+}
+.line_param_input_t:nth-of-type(2) {
+  width: 49%;
+  margin: 2px 0 0 15px;
 }
 
 .for_adaptive {
@@ -524,6 +533,9 @@ input[type=text] {
 
 .c_head {
   padding-left: 0;
+}
+.c_head_a {
+  margin-bottom: 15px;
 }
 .c_head a {
   display: none;
