--- a/scss/320.scss
+++ b/scss/320.scss
@@ -3,20 +3,29 @@
   .tlabel {
     position: absolute;
     top: 18px;
-    left: 37px;
+    left: 0;
     transition: .15s ease-in-out;
     color: #a0a0a6;
     pointer-events: none;
     text-transform: uppercase;
+    font-size: 14px;
   }
 
   .tinput:focus ~ label {
-    font-size: 9px;top: 6px;
+    font-size: 14px;
   }
 
   .tinput:valid ~ label {
+    font-size: 14px;
+  }
+
+  .tinput:focus ~ label{
     font-size: 9px;
-    top: 6px;
+    top: 0;
+  }
+
+  .label_in .array_down {
+    bottom: 17px;
   }
 
   .mobilis {
@@ -246,13 +255,13 @@
 
   .modal_line.active {
     display: block !important;
-    background: #fff;
     position: fixed;
     width: 100%;
-    padding: 20px;
+    background: #fff;
+    padding: 20px 20px 20px 0;
     box-sizing: border-box;
-    top: 0;
-    height: 100%;
+    bottom: 0;
+    height: auto;
     z-index: 999;
   }
 
@@ -336,17 +345,18 @@
     height: 40px;
     float: left;
     box-sizing: border-box;
+    margin-bottom: 20px;
+
+    &_a {
+      margin-bottom: 35px;
+    }
   }
 
   .c_head a {
     display: block;
     position: absolute;
-    left: 0;
-    background: url(../images/back.svg) no-repeat center;
-    width: 24px;
-    height: 24px;
-    text-indent: -10000px;
-    top: -3px;
+    left: 25px;
+    top: 0;
   }
 
   .component_head {
@@ -360,6 +370,10 @@
     color: #383A41;
     padding-right: 20px;
     box-sizing: border-box;
+
+    .nav_links a {
+      width: 100%;
+    }
   }
 
   .component_body {
@@ -393,7 +407,7 @@
 
   .component {
     position: relative;
-    padding-top: 40px;
+    padding-top: 20px;
     float: left;
     width: 100%;
     padding-bottom: 120px;
@@ -418,10 +432,6 @@
 
   .f_part {
     padding-bottom: 0px;
-  }
-
-  .tlabel {
-    font-size: 12px;
   }
 
   .line_param_input.short {
@@ -521,9 +531,9 @@
   }
 
   .nav_top {
-    float: left;
     width: 100%;
-    margin-bottom: 15px;
+    float: left;
+    margin: 15px 0;
     padding-right: 20px;
     box-sizing: border-box;
   }
@@ -570,6 +580,26 @@
     margin-bottom: 30px;
     padding-right: 20px;
     box-sizing: border-box;
+  }
+
+  .pr_names {
+    font-size: 20px;
+    margin-right: 15px;
+  }
+
+  .line_param_input {
+    position: relative;
+    width: 100%;
+  }
+
+  .line_param_input_t {
+    width: 100%;
+    float: left;
+
+    &:nth-of-type(2) {
+      width: 100%;
+      margin: 0;
+    }
   }
 }
 
