--- a/scss/320.scss
+++ b/scss/320.scss
@@ -24,8 +24,27 @@
     top: 0;
   }
 
-  .label_in .array_down {
+  .label_in .array_down,
+  .label_in .search {
     bottom: 17px;
+  }
+
+  .check_block {
+    width: 25%;
+    margin-top: 20px;
+  }
+
+  .title_total {
+    width: max-content;
+  }
+
+  .component_tags {
+    margin-bottom: 0;
+    margin-top: 15px;
+  }
+
+  .modal_line .nav_links {
+    width: 100%;
   }
 
   .mobilis {
@@ -75,10 +94,6 @@
     position: fixed;
     top: auto;
     width: 100%;
-    //padding: 20px;
-    //padding-top: 20px;
-    //padding-left: 20px;
-    //padding-left: 20px;
     background: #fff;
     height: 100%;
     z-index: 10;
@@ -258,9 +273,10 @@
     position: fixed;
     width: 100%;
     background: #fff;
-    padding: 20px 20px 20px 0;
+    padding: 20px;
     box-sizing: border-box;
     bottom: 0;
+    left: 0;
     height: auto;
     z-index: 999;
   }
@@ -574,6 +590,21 @@
     padding-right: 20px;
   }
 
+  .nav_links_t {
+    width: 94%;
+    padding-right: 0;
+  }
+
+  .modal_check_block {
+    width: 100% !important;
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+
+  .closebig {
+    right: 20px;
+  }
+
   .component_warning {
     float: left;
     width: 100%;
@@ -600,6 +631,10 @@
       width: 100%;
       margin: 0;
     }
+  }
+
+  .select_one {
+    margin-right: 20px;
   }
 }
 
