--- a/scss/320.scss
+++ b/scss/320.scss
@@ -636,5 +636,40 @@
   .select_one {
     margin-right: 20px;
   }
+
+  .modal_send {
+    position: fixed;
+    padding: 20px;
+    font-family: FuturaPT-Book;
+    bottom: 0;
+
+    h2 {
+      font-size: 20px;
+    }
+
+    .closebig {
+      display: none;
+    }
+
+    .l_p,
+    .r_p {
+      display: none;
+    }
+
+    .l_p_adaptive {
+      display: block;
+    }
+  }
+
+  .overlay {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(56, 58, 65, 0.8);
+    z-index: 1;
+  }
 }
 
