--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1318,7 +1318,7 @@ table.bordered tr td {
   position: relative;
   width: 15%;
   float: left;
-  margin-left: 20px;
+  margin: 20px 0 0 20px;
 }
 
 .modal_check_block {
