--- a/scss/320.scss
+++ b/scss/320.scss
@@ -34,13 +34,16 @@
     margin-top: 20px;
   }
 
-  .title_total {
-    width: max-content;
-  }
+  //.title_total {
+  //  width: max-content;
+  //}
 
   .component_tags {
-    margin-bottom: 0;
-    margin-top: 15px;
+    margin: 0 0 25px 0;
+
+    &_adaptive {
+      margin-bottom: 0;
+    }
   }
 
   .modal_line .nav_links {
@@ -366,6 +369,10 @@
     &_a {
       margin-bottom: 35px;
     }
+
+    &_adaptive {
+      margin-bottom: 0;
+    }
   }
 
   .c_head a {
@@ -377,7 +384,7 @@
 
   .component_head {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -427,6 +434,10 @@
     float: left;
     width: 100%;
     padding-bottom: 120px;
+
+    &_adaptive {
+      padding-top: 0;
+    }
   }
 
   .middle_part {
@@ -444,6 +455,10 @@
 
   .component_head_sort {
     width: 100%;
+
+    &_adaptive {
+      margin-bottom: 15px;
+    }
   }
 
   .f_part {
@@ -544,6 +559,10 @@
     float: left;
     width: 100%;
     margin-bottom: 0;
+
+    &_adaptive {
+      margin: 25px 0;
+    }
   }
 
   .nav_top {
@@ -552,6 +571,13 @@
     margin: 15px 0;
     padding-right: 20px;
     box-sizing: border-box;
+
+    &_adaptive {
+      li {
+        clear: both;
+        margin: 5px 0;
+      }
+    }
   }
 
   .header .acc_n_ico {
@@ -629,12 +655,12 @@
 
     &:nth-of-type(2) {
       width: 100%;
-      margin: 0;
+      margin: 0 0 10px 0;
     }
   }
 
   .select_one {
-    margin-right: 20px;
+    margin-right: 15px;
   }
 
   .modal_send {
@@ -670,6 +696,14 @@
     left: 0;
     background: rgba(56, 58, 65, 0.8);
     z-index: 1;
+  }
+
+  .month_select {
+    margin: 15px 0;
+  }
+
+  .title_adaptive {
+    margin-top: 20px;
   }
 }
 
